arch-wiki-docs-zh: update

--- a/archlinuxcn/arch-wiki-docs-zh/PKGBUILD
+++ b/archlinuxcn/arch-wiki-docs-zh/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgbase=arch-wiki-docs-zh
 pkgname=(arch-wiki-docs-zh-cn arch-wiki-docs-zh-tw)
-pkgver=20221209
+pkgver=20230210
 pkgrel=1
-pkgdesc='Pages from www.archlinuxcn.org optimized for offline browsing'
+pkgdesc='Pages from wiki.archlinuxcn.org optimized for offline browsing'
 arch=('any')
 url='https://github.com/archlinuxcn/arch-wiki-docs-zh'
 license=('FDL')
