--- a/archlinuxcn/python-nibabel/PKGBUILD
+++ b/archlinuxcn/python-nibabel/PKGBUILD
@@ -34,6 +34,8 @@ build() {
 package() {
   cd "${_pkgname}-${pkgver}"
   python -m installer --destdir="${pkgdir}" dist/*.whl
+  # delete unused tests directories
+  find ${pkgdir} -depth -type d -name tests -exec rm -rfv {} \;
   install -Dm644 COPYING -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 # vim:set ts=2 sw=2 et:
