--- a/archlinuxcn/imhex/PKGBUILD
+++ b/archlinuxcn/imhex/PKGBUILD
@@ -3,7 +3,7 @@
 
 _pkgname=ImHex
 pkgname=${_pkgname,,}
-pkgver=1.26.2
+pkgver=1.27.0
 pkgrel=1
 pkgdesc='A Hex Editor for Reverse Engineers, Programmers and people that value their eye sight when working at 3 AM'
 url='https://imhex.werwolv.net'
@@ -22,22 +22,19 @@ source=("$pkgname::git+https://github.com/WerWolv/ImHex.git#tag=v$pkgver"
         "libromfs::git+https://github.com/WerWolv/libromfs"
         "capstone::git+https://github.com/capstone-engine/capstone#branch=next"
         "pattern_language::git+https://github.com/WerWolv/PatternLanguage#tag=ImHex-v$pkgver"
-        0002-fix-Deduplicate-resources-directories.patch
         )
 sha256sums=('SKIP'
             'SKIP'
             'SKIP'
             'SKIP'
             'SKIP'
-            'SKIP'
-            '8a6090179fde3abf336213021e2fa15f2b7ea57b6acaf9f0b91fee45fd479135')
+            'SKIP')
 b2sums=('SKIP'
         'SKIP'
         'SKIP'
         'SKIP'
         'SKIP'
-        'SKIP'
-        '541c17e9d9cf3f0471092187f9ce804c9e28031cbb76901d35a6390b8753b927697516168e8414fc0ad3ca12e3d5de5bffdda3e0de93d50903e98123c6aad073')
+        'SKIP')
 options=(!lto)
 
 prepare() {
@@ -45,16 +42,13 @@ prepare() {
 
   git submodule init
   for name in nativefiledialog xdgpp libromfs capstone pattern_language; do
-    git config submodule.lib/external/$name.url "$srcdir/$name"
+    git submodule set-url lib/external/$name "$srcdir/$name"
   done
   for name in fmt curl yara/yara; do
     git config --remove-section submodule.lib/external/$name
   done
   git -c protocol.file.allow=always submodule update
 
-  patch -Np1 -i \
-    "$srcdir/0002-fix-Deduplicate-resources-directories.patch"
-    
   sed -E -e 's/-Werror //g' -i "$srcdir/$pkgname"/**/*.cmake "$srcdir/$pkgname"/**/CMakeLists.txt
 }
 
@@ -62,7 +56,7 @@ build() {
   cd "$srcdir"
   cmake -B build -S "$pkgname" \
     -Wno-dev \
-    -D CMAKAE_BUILD_TYPE=None \
+    -D CMAKE_BUILD_TYPE=None \
     -D CMAKE_INSTALL_PREFIX=/usr \
     -D CMAKE_SKIP_RPATH=ON \
     -D IMHEX_OFFLINE_BUILD=ON \
@@ -75,15 +69,19 @@ build() {
     -D USE_SYSTEM_NLOHMANN_JSON=ON \
     -D USE_SYSTEM_CAPSTONE=OFF \
     -D LIBPL_ENABLE_CLI=OFF \
-    -D IMHEX_VERSION="$pkgver" \
-    -G Ninja
+    -D IMHEX_VERSION="$pkgver"
 
-  ninja -C build
+  # use Makefile to workaround
+  # ninja: warning: phony target 'imhex' names itself as an input; ignoring [-w phonycycle=warn]
+  # https://github.com/apiaryio/drafter/issues/774
+  #ninja -C build
+  cmake --build build --parallel
 }
 
 package() {
   cd "$srcdir"
-  DESTDIR="${pkgdir}" ninja -C build install
+  #DESTDIR="${pkgdir}" ninja -C build install
+  make -C build DESTDIR="$pkgdir" install
   
   install -Dm0644 "$pkgname/resources/icon.svg" "$pkgdir/usr/share/icons/hicolor/scalable/apps/imhex.svg"
   for size in 32 48 64 128 256; do
@@ -100,32 +98,3 @@ package() {
     "$pkgname/README.md"
 }
 
-_package() {
-  # Executable
-  install -Dm0755 build/imhex "$pkgdir/usr/bin/imhex"
-
-  # Shared lib and plugins
-  install -Dm0755 -t "$pkgdir/usr/lib" build/lib/libimhex/libimhex.so
-
-  for plugin in builtin; do
-    install -Dm0755 -t "$pkgdir/usr/lib/imhex/plugins" "build/plugins/$plugin.hexplug"
-  done
-
-  install -dm0755 "$pkgdir/usr/share/imhex"
-
-  # Desktop file(s)
-  install -Dm0644 -t "$pkgdir/usr/share/applications" "$pkgname/dist/imhex.desktop"
-  install -Dm0644 "$pkgname/resources/icon.svg" "$pkgdir/usr/share/icons/hicolor/scalable/apps/imhex.svg"
-  for size in 32 48 64 128 256; do
-    install -dm0755 "$pkgdir/usr/share/icons/hicolor/${size}x${size}/apps"
-    rsvg-convert -a -f png -w $size -o "$pkgdir/usr/share/icons/hicolor/${size}x${size}/apps/imhex.png" \
-      "$pkgname/resources/icon.svg"
-  done
-
-  # License
-  install -Dm0644 "$pkgname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
-
-  # Documentation
-  install -Dm0644 -t "$pkgdir/usr/share/doc/$pkgname" \
-    "$pkgname/README.md"
-}
