--- a/archlinuxcn/libplacebo-git/lilac.yaml
+++ b/archlinuxcn/libplacebo-git/lilac.yaml
@@ -40,6 +40,6 @@ update_on:
     alpm: ffmpeg
     provided: libavformat.so
   - source: alpm
-    alpm: gflw-x11
+    alpm: glfw
     from_pattern: ^(\d+\.\d+).*
     to_pattern: \1
