libplacebo-git: fix depend name
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/libplacebo-git/lilac.yaml
+++ b/archlinuxcn/libplacebo-git/lilac.yaml
@@ -40,6 +40,6 @@ update_on:
     alpm: ffmpeg
     provided: libavformat.so
   - source: alpm
-    alpm: glfw
+    alpm: glfw-x11
     from_pattern: ^(\d+\.\d+).*
     to_pattern: \1
