--- a/archlinuxcn/etcd/lilac.yaml
+++ b/archlinuxcn/etcd/lilac.yaml
@@ -6,7 +6,7 @@ build_prefix: extra-x86_64
 update_on:
   - source: github
     github: etcd-io/etcd
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
 post_build: git_pkgbuild_commit
 
