python-scikit-image: update lilac.yaml to ignore rc release

--- a/archlinuxcn/python-scikit-image/lilac.yaml
+++ b/archlinuxcn/python-scikit-image/lilac.yaml
@@ -17,7 +17,8 @@ repo_depends:
 update_on:
   - source: github
     github: scikit-image/scikit-image
-    use_latest_release: true
+    use_max_tag: true
+    include_regex: 'v(\d+.\d+.\d+)'
   - alias: python
 
 # vim:set ts=2 sw=2 et:
