--- a/archlinuxcn/kicad-library-git/PKGBUILD
+++ b/archlinuxcn/kicad-library-git/PKGBUILD
@@ -21,7 +21,7 @@ sha256sums=('SKIP'
 
 pkgver() {
   cd kicad-footprints
-  git describe --long | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+  git describe --long | sed 's/-rc/rc/;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
             
 build() {
