libplacebo-git: add missing depend libdovi
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/libplacebo-git/PKGBUILD
+++ b/archlinuxcn/libplacebo-git/PKGBUILD
@@ -19,6 +19,7 @@ depends=('vulkan-icd-loader' 'libvulkan.so'
          'ffmpeg' 'libavcodec.so' 'libavutil.so' 'libavformat.so'
          'glfw'
          'sdl2' 'sdl2_image'
+         'libdovi'
          )
 makedepends=('git' 'meson' 'ninja' 'vulkan-headers' 'python' 'python-jinja' 'python-markupsafe' 'glad')
 checkdepends=(
