--- a/archlinuxcn/libplacebo-git/lilac.yaml
+++ b/archlinuxcn/libplacebo-git/lilac.yaml
@@ -8,6 +8,9 @@ pre_build: vcs_update
 
 post_build: git_pkgbuild_commit
 
+repo_depends:
+  - libdovi
+
 update_on:
   - source: github
     github: haasn/libplacebo
@@ -17,6 +20,9 @@ update_on:
   - source: alpm
     alpm: vulkan-icd-loader
     provided: libvulkan.so
+  - source: alpm
+    alpm: libdovi
+    provided: libdovi.so
   - source: alpm
     alpm: glslang
     from_pattern: ^(\d+)\.(\d+).*
