libplacebo-git: fix nvchecker

--- a/archlinuxcn/libplacebo-git/lilac.yaml
+++ b/archlinuxcn/libplacebo-git/lilac.yaml
@@ -20,7 +20,7 @@ update_on:
   - source: alpm
     alpm: vulkan-icd-loader
     provided: libvulkan.so
-  - source: alpm
+  - source: alpm-lilac
     alpm: libdovi
     provided: libdovi.so
   - source: alpm
