geph4-client: aur as source

--- a/archlinuxcn/geph4-client/lilac.yaml
+++ b/archlinuxcn/geph4-client/lilac.yaml
@@ -1,13 +1,10 @@
-pre_build_script: |
-    update_pkgver_and_pkgrel(_G.newver.replace('-', '.'))
+pre_build_script: aur_pre_build(maintainers=['RogueGirl'])
 
-post_build_script: |
-    git_pkgbuild_commit()
-    update_aur_repo()
+post_build: aur_post_build
 
 update_on:
-  - source: cratesio
-    cratesio: geph4-client
+  - source: aur
+    aur: geph4-client
   - source: manual
     manual: 1.1
 
