update 64gram info

--- a/archlinuxcn/64gram-desktop/lilac.yaml
+++ b/archlinuxcn/64gram-desktop/lilac.yaml
@@ -1,4 +1,4 @@
-pre_build_script: aur_pre_build(maintainers=['solopasha'])
+pre_build_script: aur_pre_build(maintainers=['alesar1'])
 
 post_build: aur_post_build
 
