--- a/archlinuxcn/lib32-llvm-git/lilac.yaml
+++ b/archlinuxcn/lib32-llvm-git/lilac.yaml
@@ -5,7 +5,8 @@ build_prefix: multilib
 pre_build: vcs_update
 post_build: git_pkgbuild_commit
 
+time_limit_hours: 2
+
 update_on:
-  - source: cmd # Update every other day
-    cmd: python -c "import time; print(int(time.time()) // (2 * 24 * 60 * 60))"
-  # - source: vcs # this will make update unnecessarily frequent
+    - source: cmd      # Update every other day
+      cmd: python -c "import time; print(int(time.time()) // (2 * 24 * 60 * 60))"
