--- a/archlinuxcn/llvm-git/lilac.yaml
+++ b/archlinuxcn/llvm-git/lilac.yaml
@@ -3,6 +3,7 @@ maintainers:
 build_prefix: multilib
 pre_build: vcs_update
 post_build: git_pkgbuild_commit
+time_limit_hours: 2
 repo_depends:
     - python-sphinx-automodapi
 update_on:
