--- a/archlinuxcn/yuzu-mainline-git/PKGBUILD
+++ b/archlinuxcn/yuzu-mainline-git/PKGBUILD
@@ -2,14 +2,14 @@
 
 _pkgname=yuzu
 pkgname=$_pkgname-mainline-git
-pkgver=1316.r0.g1c43c3914
+pkgver=1346.r0.g647e73edc
 pkgrel=1
 pkgdesc="An experimental open-source Nintendo Switch emulator/debugger (mainline GIT version)"
 arch=('i686' 'x86_64')
 url="https://github.com/yuzu-emu/yuzu-mainline"
 license=('GPL2')
-depends=('boost-libs' 'shared-mime-info' 'hicolor-icon-theme' 'sdl2' 'qt5-base' 'qt5-multimedia' 'qt5-tools' 'libxkbcommon-x11' 'ffmpeg' 'fmt' 'libzip' 'opus' 'libfdk-aac' 'lz4' 'mbedtls' 'openssl' 'zstd' 'qt5-webengine')
-makedepends=('llvm' 'git' 'glslang' 'cmake' 'ninja' 'graphviz' 'doxygen' 'clang' 'boost' 'catch2' 'nlohmann-json' 'rapidjson' 'desktop-file-utils' 'robin-map')
+depends=('boost-libs' 'shared-mime-info' 'hicolor-icon-theme' 'sdl2' 'qt5-base' 'qt5-multimedia' 'qt5-webengine' 'libxkbcommon-x11' 'ffmpeg' 'fmt' 'libzip' 'opus' 'libfdk-aac' 'lz4' 'openssl' 'zstd' 'cubeb' 'dynarmic' 'enet' 'libinih' 'discord-rpc' 'cpp-httplib')
+makedepends=('llvm' 'git' 'glslang' 'cmake' 'ninja' 'graphviz' 'doxygen' 'clang' 'boost' 'catch2' 'nlohmann-json' 'rapidjson' 'qt5-tools' 'desktop-file-utils' 'robin-map' 'cpp-jwt' 'xbyak' 'vulkan-headers' 'spirv-headers' 'dos2unix')
 optdepends=('qt5-wayland: for Wayland support')
 provides=('yuzu')
 conflicts=('yuzu')
@@ -25,7 +25,20 @@ pkgver() {
 prepare() {
 	cd "$srcdir/$_pkgname"
 
-	git submodule update --init --recursive
+    git submodule update --init --remote externals/sirit
+    git submodule update --init --remote externals/mbedtls
+  
+  find . -name "CMakeLists.txt" -exec sed -i 's/^.*-Werror=.*$/ /g' {} +
+  find . -name "CMakeLists.txt" -exec sed -i 's/-Werror/-W/g' {} +
+  sed -i -e 's/0.11 //g' CMakeLists.txt
+  sed -i -e 's/1.3.238/1.3.233/g' CMakeLists.txt
+  sed -i -e '/#define VK_NO_PROTOTYPES/a #define VK_ENABLE_BETA_EXTENSIONS' src/video_core/vulkan_common/vulkan_wrapper.h
+  sed -i -e 's/--quiet //g' src/video_core/host_shaders/CMakeLists.txt
+  sed -i -e 's#${SPIRV_HEADER_FILE} ${SOURCE_FILE}#${SPIRV_HEADER_FILE} ${SOURCE_FILE} 2>/dev/null#g' src/video_core/host_shaders/CMakeLists.txt
+  sed -i -e '/Name=yuzu/ s/$/ Mainline/' dist/org.yuzu_emu.yuzu.desktop
+  sed -i -e '/yuzu %f/a StartupWMClass=yuzu' dist/org.yuzu_emu.yuzu.desktop
+  sed -i -e 's_^MimeType=.*_&application/x-nx-nsp;application/x-nx-xci;_' dist/org.yuzu_emu.yuzu.desktop
+  sed -i -e 's| (%2)||' src/yuzu/aboutdialog.ui
 }
 
 build() {
@@ -37,48 +50,33 @@ build() {
 	export TRAVIS_REPO_SLUG=yuzu-emu/yuzu-mainline
 	export TRAVIS_TAG=$(git describe --tags)
 
-    find . -name "CMakeLists.txt" -exec sed -i 's/^.*-Werror$/-W/g' {} +
-    find . -name "CMakeLists.txt" -exec sed -i 's/^.*-Werror=.*$/ /g' {} +
-    find . -name "CMakeLists.txt" -exec sed -i 's/-Werror/-W/g' {} +
-
-    sed -i 's/static constexpr/const/g' src/shader_recompiler/frontend/maxwell/structured_control_flow.cpp
-	sed -i 's/add_subdirectory(mcl)/add_subdirectory(mcl EXCLUDE_FROM_ALL)/g' externals/dynarmic/externals/CMakeLists.txt
-
-    # Hopefully temporary fix for a compilation error involving fmt
-	#CXXFLAGS+=" -DFMT_USE_USER_DEFINED_LITERALS=0"
-
-	# Flag to disable pre-compiled headers so boost can build properly
-	# CXXFLAGS+=" -DENABLE_PRECOMPILED_HEADERS=OFF"
-
-	# Flag to fix SDL exceptions occurring in some users' builds
-	#CXXFLAGS+=" -I/usr/include/SDL2 -D_REENTRANT -pthread -lSDL2"
-
-  #CXXFLAGS+=" -I/usr/include/libusb-1.0"
-
 	mkdir -p build && cd build
-	cmake -GNinja .. \
-      -DCMAKE_C_COMPILER=clang \
-      -DCMAKE_CXX_COMPILER=clang++ \
-      -DCMAKE_C_FLAGS="$CFLAGS -flto=thin" \
-      -DCMAKE_CXX_FLAGS="$CXXFLAGS -flto=thin" \
-	  -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON \
-      -DCMAKE_INSTALL_PREFIX=/usr \
-	  -DCMAKE_BUILD_TYPE=Release \
-	  -DYUZU_ENABLE_COMPATIBILITY_REPORTING=ON \
-	  -DENABLE_COMPATIBILITY_LIST_DOWNLOAD=ON \
-	  -DUSE_DISCORD_PRESENCE=ON \
-      -DYUZU_USE_QT_WEB_ENGINE=ON \
-      -DENABLE_QT_TRANSLATION=ON \
-      -DDYNARMIC_NO_BUNDLED_FMT=ON \
-      -DDYNARMIC_NO_BUNDLED_ROBIN_MAP=ON \
-      -DBUILD_REPOSITORY=yuzu-emu/yuzu-mainline \
-      -DBUILD_TAG=${pkgver} \
-      -DTITLE_BAR_FORMAT_IDLE="yuzu mainline | ${pkgver} {}" \
-      -DTITLE_BAR_FORMAT_RUNNING="yuzu mainline | ${pkgver} | {}" \
-      -DYUZU_USE_BUNDLED_OPUS=OFF \
-      -DYUZU_USE_EXTERNAL_SDL2=OFF \
-      -DYUZU_USE_BUNDLED_FFMPEG=OFF
-
+  cmake .. -GNinja \
+    -DCMAKE_CXX_COMPILER=clang++ \
+    -DCMAKE_C_COMPILER=clang \
+    -DCMAKE_C_FLAGS="$CFLAGS -flto=thin" \
+    -DCMAKE_CXX_FLAGS="$CXXFLAGS -flto=thin" \
+    -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON \
+    -DTITLE_BAR_FORMAT_IDLE="yuzu Mainline $pkgver" \
+    -DTITLE_BAR_FORMAT_RUNNING="yuzu Mainline $pkgver | {3}" \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DYUZU_ENABLE_COMPATIBILITY_REPORTING=ON \
+    -DENABLE_COMPATIBILITY_LIST_DOWNLOAD=ON \
+    -DYUZU_USE_QT_WEB_ENGINE=ON \
+    -DUSE_DISCORD_PRESENCE=ON \
+    -DENABLE_QT_TRANSLATION=ON \
+    -DYUZU_USE_BUNDLED_FFMPEG=OFF \
+    -DYUZU_USE_BUNDLED_QT=OFF \
+    -DYUZU_USE_EXTERNAL_SDL2=OFF \
+    -DSIRIT_USE_SYSTEM_SPIRV_HEADERS=ON \
+    -DYUZU_CHECK_SUBMODULES=OFF \
+    -DYUZU_USE_EXTERNAL_VULKAN_HEADERS=OFF \
+    -DYUZU_USE_FASTER_LD=OFF \
+    -DYUZU_USE_PRECOMPILED_HEADERS=OFF \
+	-DYUZU_USE_QT_MULTIMEDIA=ON \
+    -DYUZU_TESTS=OFF
+ 
  ninja
 }
 
