--- a/archlinuxcn/linux-next-git/PKGBUILD
+++ b/archlinuxcn/linux-next-git/PKGBUILD
@@ -6,7 +6,7 @@
 # Contributor:  Timofey Titovets <nefelim4ag@gmail.com>
 
 pkgbase=linux-next-git
-pkgver=20230117.r0.g9ce08dd7ea24
+pkgver=20230220.r0.gd2af0fa4bfa4
 _srcname=linux-next
 pkgrel=1
 pkgdesc='Linux NEXT'
@@ -37,7 +37,6 @@ prepare() {
 
     ### Setting version
         echo "Setting version..."
-        scripts/setlocalversion --save-scmversion
         echo "-$pkgrel" > localversion.10-pkgrel
         echo "${pkgbase#linux}" > localversion.20-pkgname
 
@@ -47,18 +46,52 @@ prepare() {
             src="${src%%::*}"
             src="${src##*/}"
             [[ $src = *.patch ]] || continue
-        echo "Applying patch $src..."
-        patch -Np1 < "../$src"
+            echo "Applying patch $src..."
+            patch -Np1 < "../$src"
         done
 
     ### Setting config
         echo "Setting config..."
         cp ../config .config
         make olddefconfig
+        diff -u ../config .config || :
 
     ### Prepared version
+        make include/config/kernel.release
         make -s kernelrelease > version
         echo "Prepared $pkgbase version $(<version)"
+    
+    ### Disable debug
+        echo "Disabling DEBUG kernel config..."
+        scripts/config -d DEBUG_INFO \
+                        -d DEBUG_INFO_BTF \
+                        -d DEBUG_INFO_DWARF4 \
+                        -d DEBUG_INFO_DWARF5 \
+                        -d PAHOLE_HAS_SPLIT_BTF \
+                        -d DEBUG_INFO_BTF_MODULES \
+                        -d SLUB_DEBUG \
+                        -d PM_DEBUG \
+                        -d PM_ADVANCED_DEBUG \
+                        -d PM_SLEEP_DEBUG \
+                        -d ACPI_DEBUG \
+                        -d SCHED_DEBUG \
+                        -d LATENCYTOP \
+                        -d DEBUG_PREEMP
+
+    ### Running make nconfig
+	[[ -z "$_makenconfig" ]] ||  make nconfig
+
+    ### Running make menuconfig
+	[[ -z "$_makemenuconfig" ]] || make menuconfig
+
+    ### Running make xconfig
+	[[ -z "$_makexconfig" ]] || make xconfig
+
+    ### Running make gconfig
+	[[ -z "$_makegconfig" ]] || make gconfig
+
+    ### Save configuration for later reuse
+	cat .config > "${startdir}/config.last"
 }
 
 build() {
