--- a/archlinuxcn/logseq-desktop/PKGBUILD
+++ b/archlinuxcn/logseq-desktop/PKGBUILD
@@ -1,19 +1,19 @@
 # Maintainer: Xuanwo <xuanwo@archlinuxcn.org>
 # Acknowledgment: Borrowed a lot from logseq-desktop-git, thank @pychuang 
 pkgname=logseq-desktop
-pkgver=0.8.15
+pkgver=0.8.17
 pkgrel=1
 pkgdesc="A privacy-first, open-source platform for knowledge sharing and management."
 arch=("x86_64")
 url="https://github.com/logseq/logseq"
 license=('AGPL3')
-makedepends=("git" "yarn" "npm" "clojure" "nodejs-lts-gallium")
+makedepends=("git" "yarn" "npm" "clojure" "nodejs>=16")
 provides=("logseq-desktop")
 conflicts=("logseq-desktop-git" "logseq-desktop-bin")
 source=("${pkgname}-${pkgver}.zip::https://github.com/logseq/logseq/archive/refs/tags/${pkgver}.zip"
       "build.patch"
       "${pkgname}.desktop")
-sha256sums=('834f0e60491393a13a9738d18405134060a658868c640d7b27a023d0b6565c51'
+sha256sums=('fbe9d8327c9df30475738eca352f4a34284ff5b4a7cb94937b828310b10a39cf'
             'b26c6ed39e2635e08a0df83d92883e670b75b02ed1c2c279044909c04edf8fc2'
             'bfa7d2cd6869968d7a77d317e966aec67ed4b4aa17fe7931e920c00f40218e3c')
 
