[deadbeef-mpris2-plugin] Corrent src link

--- a/archlinuxcn/deadbeef-mpris2-plugin/PKGBUILD
+++ b/archlinuxcn/deadbeef-mpris2-plugin/PKGBUILD
@@ -9,17 +9,17 @@ license=('GPL2')
 depends=('glib2' 'deadbeef' )
 conflicts=('deadbeef-mpris-plugin')
 options=('!libtool')
-source=(https://github.com/Serranya/$pkgname/releases/download/v$pkgver/$pkgname-$pkgver.tar.xz)
+source=(https://github.com/DeaDBeeF-Player/deadbeef-mpris2-plugin/archive/refs/tags/v${pkgver}.tar.gz)
 md5sums=('c7e6b795bb5092e1aa5af7e2d1640d70')
 
 build() {
-  cd "${srcdir}/deadbeef-${pkgver}"
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr 
   make
 }
 
 package() {
-  cd "${srcdir}/deadbeef-${pkgver}"
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
   make DESTDIR="${pkgdir}" install
 }
