[deadbeef-mpris2-plugin] Use correct build method

--- a/archlinuxcn/deadbeef-mpris2-plugin/PKGBUILD
+++ b/archlinuxcn/deadbeef-mpris2-plugin/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Peter Lamby <peterlamby@web.de>
 pkgname=deadbeef-mpris2-plugin
-pkgver=1.14
+pkgver=1.16
 pkgrel=1
 pkgdesc="MPRISv2 plugin for the DeaDBeeF music player"
 arch=('i686' 'x86_64')
@@ -10,10 +10,11 @@ depends=('glib2' 'deadbeef' )
 conflicts=('deadbeef-mpris-plugin')
 options=('!libtool')
 source=(https://github.com/DeaDBeeF-Player/deadbeef-mpris2-plugin/archive/refs/tags/v${pkgver}.tar.gz)
-md5sums=('c7e6b795bb5092e1aa5af7e2d1640d70')
+md5sums=('c7943dcb8e723d01edb621b74a37ba14')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  autoreconf --install
   ./configure --prefix=/usr 
   make
 }
