--- a/archlinuxcn/python-mmlvis/lilac.yaml
+++ b/archlinuxcn/python-mmlvis/lilac.yaml
@@ -9,6 +9,8 @@ repo_depends:
 update_on:
   - source: pypi
     pypi: mmlvis
+  - source: manual
+    manual: 1
   - alias: python
 # vim:set ts=2 sw=2 et:
 
