--- a/archlinuxcn/heroic-games-launcher-bin/PKGBUILD
+++ b/archlinuxcn/heroic-games-launcher-bin/PKGBUILD
@@ -3,19 +3,20 @@
 
 pkgname=heroic-games-launcher-bin
 epoch=2
-_pkgver=2.6.1
-pkgver=2.6.1
+_pkgver=2.6.2
+pkgver=2.6.2
 pkgrel=1
 pkgdesc="HGL, a Native alternative Linux Launcher for Epic Games"
 arch=('x86_64')
 url="https://github.com/Heroic-Games-Launcher/HeroicGamesLauncher"
 license=('GPL3')
+provides=('heroic-games-launcher')
 conflicts=(${pkgname%-*}-{appimage,electron})
 depends=('fuse2' 'gawk' 'python-wheel' 'python-setuptools')
 _filename=heroic-${_pkgver}.pacman
 source=("$url/releases/download/v${_pkgver}/${_filename}")
 noextract=("${_filename}")
-md5sums=('21e9df1be8a60c1185913d7db5860efb')
+md5sums=('9fe74a3324e17cbf6c9205769f842cce')
 options=(!strip)
 
 package() {
