--- a/archlinuxcn/deadbeef-git/lilac.yaml
+++ b/archlinuxcn/deadbeef-git/lilac.yaml
@@ -8,3 +8,7 @@ pre_build: vcs_update
 update_on:
   - source: github
     github: DeaDBeeF-Player/deadbeef
+  - source: alpm
+    alpm: flac
+  - source: alpm
+    alpm: ffmpeg
