--- a/archlinuxcn/deadbeef/lilac.yaml
+++ b/archlinuxcn/deadbeef/lilac.yaml
@@ -7,3 +7,7 @@ update_on:
   - source: github
     github: DeaDBeeF-Player/deadbeef
     use_max_tag: true
+  - source: alpm
+    alpm: flac
+  - source: alpm
+    alpm: ffmpeg
