[linux-amd-drm-next] Add email to lilac.yaml and try max_tag

--- a/archlinuxcn/linux-amd-drm-next/lilac.yaml
+++ b/archlinuxcn/linux-amd-drm-next/lilac.yaml
@@ -2,6 +2,7 @@
 
 maintainers:
   - github: heavysink
+    email: winstonwu91@gmail.com
 
 time_limit_hours: 4
 
@@ -10,5 +11,5 @@ build_prefix: extra-x86_64
 update_on:
   - source: vcs
     vcs: git+https://gitlab.freedesktop.org/agd5f/linux.git
-    use_latest_tag: true
+    use_max_tag: true
     query: amd-drm-next-
