--- a/archlinuxcn/deadbeef-mpris2-plugin/lilac.yaml
+++ b/archlinuxcn/deadbeef-mpris2-plugin/lilac.yaml
@@ -6,7 +6,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit 
 
 repo_depends:
   - deadbeef
